# rpn

./: .buildinfo  .clang-format  .gitignore  CMakeLists.txt  README.md  calculation.html  changelog.html  genindex.html  index.html  meta  objects.inv  search.html  searchindex.js
.doctrees/: calculation.doctree  changelog.doctree  environment.pickle  index.doctree
.github/workflows/: clang.yml
_sources/: calculation.rst.txt  changelog.rst.txt  index.rst.txt
_static/: documentation_options.js
cmake/: ClangModule.cmake  CodeCoverage.cmake  ExternalProjects.cmake
coverage/: index.html
coverage/coverage/home/runner/work/rpn/rpn/src/modules/calculator/: controller.cpp.html  model.cpp.html  parser.cpp.html  stack.cpp.html  transaction.cpp.html  undo_handler.cpp.html  value.cpp.html
coverage/coverage/home/runner/work/rpn/rpn/src/modules/calculator/math/: arithmetic.cpp.html  (+4 more)
coverage/coverage/home/runner/work/rpn/rpn/src/modules/lib/: binary_find.cpp.html  dictionary.cpp.html
coverage/coverage/home/runner/work/rpn/rpn/src/modules/math/: math.cpp.html
coverage/coverage/home/runner/work/rpn/rpn/src/modules/parser/: parser.cpp.html  token.cpp.html
coverage/coverage/home/runner/work/rpn/rpn/tests/: format_error.cpp.html  handle_input.cpp.html  math.cpp.html  test_constexpr.cpp.html
coverage/coverage/home/runner/work/rpn/rpn/tests/calculator/: controller.cpp.html  model.cpp.html  parser.cpp.html  stack.cpp.html  transaction.cpp.html  undo_handler.cpp.html  value.cpp.html
coverage/coverage/home/runner/work/rpn/rpn/tests/calculator/controller/: change_base.cpp.html  constants.cpp.html  function_ceil.cpp.html  function_debug.cpp.html  function_floor.cpp.html  function_logarithm.cpp.html  function_pow.cpp.html  function_round.cpp.html  function_trunc.cpp.html  key_backspace.cpp.html  key_char_ampersand.cpp.html  key_char_backslash.cpp.html  key_char_circumflex.cpp.html  key_char_default.cpp.html  key_char_forward_slash.cpp.html  key_char_greater_than.cpp.html  key_char_less_than.cpp.html  key_char_minus.cpp.html  key_char_percentage.cpp.html  key_char_pipe.cpp.html  key_char_plus.cpp.html  key_char_star.cpp.html  key_char_tilde.cpp.html  key_control_g.cpp.html  key_control_n.cpp.html  key_control_pow.cpp.html  key_control_z.cpp.html  key_enter.cpp.html  math_add.cpp.html  math_and.cpp.html  math_complement.cpp.html  math_div.cpp.html  math_mul.cpp.html  math_or.cpp.html  math_shl.cpp.html  math_shr.cpp.html  math_sub.cpp.html  math_xor.cpp.html
coverage/coverage/home/runner/work/rpn/rpn/tests/calculator/model/: change_base.cpp.html  input.cpp.html  stack.cpp.html
coverage/coverage/home/runner/work/rpn/rpn/tests/calculator/parser/: floating_point_value.cpp.html  signed_value.cpp.html  unsigned_value.cpp.html
coverage/coverage/home/runner/work/rpn/rpn/tests/lib/: binary_find.cpp.html  dictionary.cpp.html
coverage/coverage/home/runner/work/rpn/rpn/tests/parser/: floating_point_value.cpp.html  parser.cpp.html  signed_value.cpp.html  unsigned_value.cpp.html
doc/: calculation.rst  changelog.rst  conf.py  index.rst
patches/: add-a-calculator-controller  add-a-calculator-model-object  add-a-calculator-value-object  add-a-coverage-validation  add-an-initial-gui  debug-mode  implement-input-prefixes  implement-the-basic-arithmetic  implement-the-display-base  implements-log-operations  improve-the-add_module-cmake  modulo  playing-with-json  refresh-temp  remainder  return-span-instead-of-vector  toy-with-a-gui  undo-cmake-formatting  update-clang-format-settings  xxx
scripts/: CMakeLists.txt  black.sh  clang-format.sh  cmake-format.sh  format.sh
src/: CMakeLists.txt  gui.cpp  rpn.cpp  tui.cpp
src/modules/: CMakeLists.txt
src/modules/calculator/: CMakeLists.txt  calculator.cpp  controller.cpp  model.cpp  parser.cpp  stack.cpp  stack.cppm  transaction.cpp  undo_handler.cpp  value.cpp  value.cppm
src/modules/calculator/math/: arithmetic.cpp  arithmetic.cppm  bitwise.cpp  bitwise.cppm  core.cpp  core.cppm  logarithm.cpp  round.cpp
src/modules/lib/: CMakeLists.txt  base.cpp  binary_find.cpp  dictionary.cpp
src/modules/math/: CMakeLists.txt  math.cpp
src/modules/parser/: CMakeLists.txt  parser.cpp  token.cpp
src/modules/parser/detail/: base.cpp  floating_point.cpp  invalid_value.cpp  signed.cpp  string.cpp  unsigned.cpp
tests/: CMakeLists.txt  format_error.cpp  handle_input.cpp  math.cpp  test_constexpr.cpp
tests/calculator/: controller.cpp  model.cpp  parser.cpp  stack.cpp  transaction.cpp  undo_handler.cpp  value.cpp
tests/calculator/controller/: change_base.cpp  constants.cpp  function_ceil.cpp  function_debug.cpp  function_floor.cpp  function_logarithm.cpp  function_pow.cpp  function_round.cpp  function_trunc.cpp  key_backspace.cpp  key_char_ampersand.cpp  key_char_backslash.cpp  key_char_circumflex.cpp  key_char_default.cpp  key_char_forward_slash.cpp  key_char_greater_than.cpp  key_char_less_than.cpp  key_char_minus.cpp  key_char_percentage.cpp  key_char_pipe.cpp  key_char_plus.cpp  key_char_star.cpp  key_char_tilde.cpp  key_control_g.cpp  key_control_n.cpp  key_control_pow.cpp  key_control_z.cpp  key_enter.cpp  math_add.cpp  math_and.cpp  math_complement.cpp  math_div.cpp  math_mul.cpp  math_or.cpp  math_shl.cpp  math_shr.cpp  math_sub.cpp  math_xor.cpp
tests/calculator/model/: change_base.cpp  input.cpp  stack.cpp
tests/calculator/parser/: floating_point_value.cpp  signed_value.cpp  unsigned_value.cpp
tests/calculator/value/math/: core.cpp
tests/calculator/value/math/arithmetic/: add.cpp  division.cpp  modulo.cpp  multiply.cpp  negate.cpp  power.cpp  quotient.cpp  subtract.cpp
tests/calculator/value/math/bitwise/: and.cpp  complement.cpp  or.cpp  shl.cpp  shr.cpp  xor.cpp
tests/calculator/value/math/logarithm/: lg.cpp  ln.cpp  log.cpp
tests/calculator/value/math/round/: ceil.cpp  floor.cpp  round.cpp  trunc.cpp
tests/lib/: binary_find.cpp  dictionary.cpp
tests/parser/: floating_point_value.cpp  parser.cpp  signed_value.cpp  unsigned_value.cpp
utils/: check_coverage.py
www/: index.html
www/coverage/: index.html
(+28 files in other folders)
