add_executable(tests
	calculator/controller.cpp
	calculator/controller/math_add.cpp
	calculator/controller/math_sub.cpp
	calculator/controller/math_mul.cpp
	calculator/controller/math_div.cpp
	calculator/model.cpp
	calculator/value.cpp
	format_error.cpp
	math.cpp
)
target_compile_options(tests
	PRIVATE
		${module_compile_options}
)
target_link_libraries(tests
	PRIVATE
		calculator
		math
		gtest_main
		c++
)
add_module(tests.format_error format_error.cpp)
add_dependencies(tests
	tests.format_error.pcm
)
target_code_coverage(tests)
